# router/routesv1.go
@@ -11,7 +11,9 @@ import (
 
 // addRoutesV1 Add v1 endpoints
 func addRoutesV1(s server.Server, r *mux.Router) {
+	r.HandleFunc("/bookings", handlers.GetBookingsHandler(s)).Methods(http.MethodGet)
 	r.HandleFunc("/bookings", handlers.InsertBookingHandler(s)).Methods(http.MethodPost)
+
 	r.HandleFunc("/classes", handlers.GetClassesHandler(s)).Methods(http.MethodGet)
 	r.HandleFunc("/classes", handlers.InsertClassHandler(s)).Methods(http.MethodPost)
 }
